# beine

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test.yml  deploy-debian.yml
beine_cpp/: CMakeLists.txt  package.xml
beine_cpp/examples/: legs_consumer_log.cpp  legs_logger.cpp  legs_provider_dummy.cpp  legs_teleop.cpp  simple_stance_filter.cpp  stance_simple_filter.cpp
beine_cpp/include/: beine_cpp.hpp
beine_cpp/include/beine_cpp/: beine_cpp.hpp  node.hpp  utility.hpp
beine_cpp/include/beine_cpp/consumer/: joints_consumer.hpp  legs_consumer.hpp
beine_cpp/include/beine_cpp/legs/: joints_consumer.hpp  legs_consumer.hpp  legs_provider.hpp  stance_provider.hpp
beine_cpp/include/beine_cpp/node/: legs_node.hpp
beine_cpp/include/beine_cpp/provider/: legs_provider.hpp  stance_provider.hpp
beine_cpp/include/beine_cpp/utility/: interface.hpp  stance.hpp
beine_cpp/src/: interface.cpp  stance.cpp
beine_cpp/src/consumer/: joints_consumer.cpp  legs_consumer.cpp
beine_cpp/src/node/: legs_node.cpp
beine_cpp/src/provider/: legs_provider.cpp  stance_provider.cpp
beine_cpp/src/utility/: interface.cpp
beine_cpp/test/: compile_test.cpp  stance_test.cpp
beine_interfaces/: CMakeLists.txt  package.xml
beine_interfaces/include/beine_interfaces/: beine_interfaces.hpp
beine_interfaces/msg/: Joints.msg  Position.msg  Stance.msg
beine_interfaces/test/: compile_test.cpp  header_test.cpp
include/bein_interfaces/: bein_interfaces.hpp
